Surge Java Examples (#57)
* surge engine java examples

* surge engine main config WIP

* surge engine config in main

* added application conf file

* working version

* remove intellij file

* surge engine working java version

* resolve PR comments

* surge java example documentation update

* PR comment resolved

* surge java example documentation update

* maven encoding warning removed

* attempt

* removed folder

* PR comment resolved

* comment added

* vavr comment updated

* build.sbt minor change

Co-authored-by: Sebastian Harko <sebastian.harko@protonmail.com>
Co-authored-by: lteqgt <5114916+sebastianharko@users.noreply.github.com>